Fix line wrapping in event text and update some styling for the tooltips

--- a/style.css
+++ b/style.css
@@ -37,12 +37,14 @@ h2 {
   
 .day .tooltiptext {
     visibility: hidden;
-    width: 200px;
+    min-width: 220px;
+    white-space: pre-wrap;
     background-color: lightgrey;
     color: black;
     text-align: center;
-    padding: 5px 3px;
+    padding: 5px 10px;
     border-radius: 6px;
+    font-family: Arial, Helvetica, sans-serif;
    
     display:none;
     position: absolute;
